fix: telegram link, footer

--- a/_config.yml
+++ b/_config.yml
@@ -167,6 +167,8 @@ quick_links:
   link: solutions/
 - title: Products
   link: products/
+- title: Pricing
+  link: pricing/
 - title: Blog
   link: blog/
 - title: Resources
