--- a/_config.yml
+++ b/_config.yml
@@ -209,6 +209,7 @@ d-drive:
   # for solutions page(mobile)
   description-2: Existing file servers and new Diode-enabled NAS systems can use Diode Drive to combine the privacy and compliance benefits of local storage with the benefits and efficiency of remote access.
   icon: images/diode-drive.png
+  learn-more: 'products/d-drive/'
   download-base: https://github.com/diodechain/diode_go_client/releases/download/v0.6.1/
   downloads:
   - title: <i class="fab fa-raspberry-pi"></i> Raspberry Pi (ARM)
@@ -233,7 +234,7 @@ diode-cli:
   # for solution page(desktop)
   description-1: The Diode CLI is used to maintain systems in hard-to-access facilities and to securely publish data streams and web properties.
   icon: images/diode-client.png
-  learn-more: link
+  learn-more: 'products/diode-cli/'
   download-command: 'curl -Ssf https://diode.io/install.sh | sh'
   download-base: https://github.com/diodechain/diode_go_client/releases/download/v0.6.1/
   downloads:
@@ -260,6 +261,7 @@ diode-cli:
 # for only solution pages (mobile)
 diode-network:
   title: Diode Network
+  learn-more: 'products/diode-network/'
   description: The Diode Network is the world’s only fully decentralized communications network capable of supporting the needs of private, secure communications for the enterprise.
   link: 'https://support.diode.io/category/cck0x29491'
 
