--- a/_config.yml
+++ b/_config.yml
@@ -192,6 +192,7 @@ links:
   privacy: 'privacy-policy/'
   terms: 'msa/'
   requestdemo: 'https://diodedemo.paperform.co'
+  mobilesurvey: 'https://fot7s63t.paperform.co/'
     
   # Social Links
   youtube: 'https://www.youtube.com/channel/UC3b5voADiipUmq1Q-vtPKsA'
