--- a/_config.yml
+++ b/_config.yml
@@ -193,6 +193,8 @@ links:
   terms: 'msa/'
   requestdemo: 'https://diodedemo.paperform.co'
   mobilesurvey: 'https://fot7s63t.paperform.co'
+  diodedriveplaystore: 'https://play.google.com/store/apps/details?id=io.diode.drive'
+  diodedriveappstore: 'https://apps.apple.com/us/app/diode-drive/id1605222443'
     
   # Social Links
   youtube: 'https://www.youtube.com/channel/UC3b5voADiipUmq1Q-vtPKsA'
