--- a/_config.yml
+++ b/_config.yml
@@ -210,11 +210,11 @@ links:
 d-drive:
   title: Diode Drive
   title-1: Diode Drive
-  description: A privacy-focused alternative to Google Drive or Dropbox - share and collaborate without uploading to the cloud!
+  description: An easy to use collaboration portal for teams who care about the security of their communications, information, and assets. 
   # for solutions page(desktop)
-  description-1: Diode Drive combines the privacy and compliance benefits of local storage with the benefits and efficiency of remote access.
+  description-1: Diode Drive combines the privacy and compliance benefits of local operations with the benefits and efficiency of remote access.
   # for solutions page(mobile)
-  description-2: Existing file servers and new Diode-enabled NAS systems can use Diode Drive to combine the privacy and compliance benefits of local storage with the benefits and efficiency of remote access.
+  description-2: Existing servers and new Diode-enabled systems can use Diode to combine the privacy and compliance benefits of local operations with the benefits and efficiency of remote access.
   icon: images/diode-drive.png
   thank-you-for-downloading: 'products/d-drive/thanks/'
   learn-more: 'products/d-drive/'
