--- a/_config.yml
+++ b/_config.yml
@@ -210,7 +210,7 @@ links:
 d-drive:
   title: Diode Drive
   title-1: Diode Drive
-  description: An easy to use collaboration portal for teams who care about the security of their communications, information, and assets. 
+  description: An easy to use collaboration app for teams who care about the security of their communications, information, and assets. 
   # for solutions page(desktop)
   description-1: Diode Drive combines the privacy and compliance benefits of local operations with the benefits and efficiency of remote access.
   # for solutions page(mobile)
